--- a/app/css/main.css
+++ b/app/css/main.css
@@ -771,7 +771,14 @@ a {
         padding: 5px 0; }
         .card-item-row-colors_horiz .card-item-row-colors__color {
           margin-right: 6px;
-          margin-bottom: unset; }
+          margin-bottom: unset;
+          width: 24px;
+          height: 24px; }
+          .card-item-row-colors_horiz .card-item-row-colors__color:after {
+            width: 14px;
+            height: 9px;
+            top: 4px;
+            left: 4px; }
   .card-item.active {
     position: relative;
     z-index: 100;
@@ -1143,6 +1150,19 @@ a {
       top: 0px;
       right: 0px;
       cursor: pointer; }
+    .card-main-block-gallery-big {
+      position: relative;
+      -webkit-box-flex: 1;
+      -webkit-flex: 1;
+          -ms-flex: 1;
+              flex: 1; }
+      .card-main-block-gallery-big-item {
+        padding-top: 30px;
+        display: none; }
+        .card-main-block-gallery-big-item img {
+          width: 100%; }
+        .card-main-block-gallery-big-item.active {
+          display: block; }
     .card-main-block-gallery-mini {
       display: -webkit-box;
       display: -webkit-flex;
@@ -1156,7 +1176,8 @@ a {
       -webkit-box-align: center;
       -webkit-align-items: center;
           -ms-flex-align: center;
-              align-items: center; }
+              align-items: center;
+      margin-right: 15px; }
       .card-main-block-gallery-mini__item {
         margin-bottom: 20px;
         display: -webkit-box;
@@ -1172,11 +1193,15 @@ a {
             -ms-flex-pack: center;
                 justify-content: center;
         height: 80px;
-        width: 95px; }
+        width: 95px;
+        border: 1px solid transparent;
+        cursor: pointer; }
+        .card-main-block-gallery-mini__item img {
+          width: 100%; }
         .card-main-block-gallery-mini__item.active {
           border: 1px solid #D71921;
-          -webkit-box-shadow: 0px 0px 10px #D71921;
-                  box-shadow: 0px 0px 10px #D71921; }
+          -webkit-box-shadow: 0px 0px 2px #D71921;
+                  box-shadow: 0px 0px 2px #D71921; }
     .card-main-block-description {
       width: 100%;
       display: -webkit-box;
@@ -1221,6 +1246,11 @@ a {
             -ms-flex-align: start;
                 align-items: flex-start;
         position: relative; }
+        .card-main-block-description-row_center {
+          -webkit-box-align: center;
+          -webkit-align-items: center;
+              -ms-flex-align: center;
+                  align-items: center; }
         .card-main-block-description-row_border-bottom {
           border-bottom: 1px solid #EEEEEE; }
         .card-main-block-description-row_align-stretch {
@@ -1515,3 +1545,486 @@ a {
     -webkit-transform: translate(-50%, -50%);
         -ms-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%); }
+
+.tabs-list {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 55px;
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch; }
+  .tabs-list-item {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    background: #F9F9F9;
+    border: 2px solid #F2F2F2;
+    border-right: none;
+    padding: 0 50px;
+    white-space: nowrap;
+    cursor: pointer; }
+    .tabs-list-item.active {
+      background: #EDEDED; }
+    .tabs-list-item:first-child {
+      -webkit-border-radius: 4px 0px 0px 4px;
+              border-radius: 4px 0px 0px 4px; }
+    .tabs-list-item:last-child {
+      -webkit-border-radius: 0px 4px 4px 0px;
+              border-radius: 0px 4px 4px 0px;
+      border-right: 2px solid #F2F2F2; }
+    .tabs-list-item:nth-child(2) {
+      -webkit-box-flex: 1;
+      -webkit-flex: 1 400px;
+          -ms-flex: 1 400px;
+              flex: 1 400px; }
+
+.tabs-container-list {
+  padding: 30px 0; }
+  .tabs-container-list-item {
+    display: none; }
+    .tabs-container-list-item.active {
+      display: block; }
+    .tabs-container-list-item-innercontainer {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: justify;
+      -webkit-justify-content: space-between;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
+      -webkit-box-align: start;
+      -webkit-align-items: flex-start;
+          -ms-flex-align: start;
+              align-items: flex-start; }
+      .tabs-container-list-item-innercontainer-side {
+        margin-right: 30px; }
+        .tabs-container-list-item-innercontainer-side-material__head {
+          margin-bottom: 25px; }
+        .tabs-container-list-item-innercontainer-side-material-list {
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-align: start;
+          -webkit-align-items: flex-start;
+              -ms-flex-align: start;
+                  align-items: flex-start;
+          margin-bottom: 25px; }
+          .tabs-container-list-item-innercontainer-side-material-list-item {
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            -webkit-flex-direction: column;
+                -ms-flex-direction: column;
+                    flex-direction: column;
+            -webkit-box-align: center;
+            -webkit-align-items: center;
+                -ms-flex-align: center;
+                    align-items: center;
+            margin-right: 30px;
+            cursor: pointer; }
+            .tabs-container-list-item-innercontainer-side-material-list-item:last-child {
+              margin-right: 0px; }
+            .tabs-container-list-item-innercontainer-side-material-list-item__img {
+              width: 83px;
+              height: 83px;
+              margin-bottom: 10px; }
+            .tabs-container-list-item-innercontainer-side-material-list-item__description {
+              font-size: 14px; }
+        .tabs-container-list-item-innercontainer-side-text-block {
+          margin-bottom: 10px; }
+          .tabs-container-list-item-innercontainer-side-text-block__head {
+            font-size: 18px;
+            font-family: 'Roboto', sans-serif;
+            font-weight: 500;
+            margin-bottom: 10px; }
+          .tabs-container-list-item-innercontainer-side-text-block__main {
+            font-size: 18px;
+            line-height: 32px; }
+        .tabs-container-list-item-innercontainer-side-top {
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-pack: justify;
+          -webkit-justify-content: space-between;
+              -ms-flex-pack: justify;
+                  justify-content: space-between;
+          -webkit-box-align: center;
+          -webkit-align-items: center;
+              -ms-flex-align: center;
+                  align-items: center;
+          margin-bottom: 30px; }
+          .tabs-container-list-item-innercontainer-side-top-item-name {
+            line-height: 34px;
+            font-size: 24px;
+            font-family: 'Roboto', sans-serif;
+            margin-bottom: 20px; }
+          .tabs-container-list-item-innercontainer-side-top-item-rate {
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-align: center;
+            -webkit-align-items: center;
+                -ms-flex-align: center;
+                    align-items: center; }
+            .tabs-container-list-item-innercontainer-side-top-item-rate-stars {
+              display: -webkit-box;
+              display: -webkit-flex;
+              display: -ms-flexbox;
+              display: flex;
+              margin-right: 10px; }
+              .tabs-container-list-item-innercontainer-side-top-item-rate-stars__star {
+                margin-right: 2px; }
+            .tabs-container-list-item-innercontainer-side-top-item-rate-number {
+              font-size: 14px;
+              margin-right: 10px; }
+            .tabs-container-list-item-innercontainer-side-top-item-rate-count {
+              font-size: 14px;
+              color: #B8BFD3;
+              margin-right: 60px; }
+            .tabs-container-list-item-innercontainer-side-top-item-rate-time-use {
+              font-size: 14px;
+              color: #737373; }
+          .tabs-container-list-item-innercontainer-side-top-item-date {
+            font-size: 14px;
+            margin-bottom: 15px; }
+          .tabs-container-list-item-innercontainer-side-top-item-vote {
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-align: center;
+            -webkit-align-items: center;
+                -ms-flex-align: center;
+                    align-items: center;
+            font-size: 14px; }
+            .tabs-container-list-item-innercontainer-side-top-item-vote-like {
+              color: #008F0E;
+              margin-right: 15px; }
+              .tabs-container-list-item-innercontainer-side-top-item-vote-like svg {
+                margin-right: 10px; }
+            .tabs-container-list-item-innercontainer-side-top-item-vote-dislike {
+              color: #D71921; }
+              .tabs-container-list-item-innercontainer-side-top-item-vote-dislike svg {
+                -webkit-transform: translateY(45%);
+                    -ms-transform: translateY(45%);
+                        transform: translateY(45%);
+                margin-right: 10px; }
+        .tabs-container-list-item-innercontainer-side:last-child {
+          margin-right: 0px; }
+        .tabs-container-list-item-innercontainer-side-text {
+          font-weight: 300;
+          line-height: 42px; }
+        .tabs-container-list-item-innercontainer-side-video {
+          position: relative;
+          display: inline-block; }
+          .tabs-container-list-item-innercontainer-side-video video {
+            width: 670px; }
+          .tabs-container-list-item-innercontainer-side-video__play-btn {
+            position: absolute;
+            z-index: 10;
+            top: 50%;
+            left: 50%;
+            -webkit-transform: translate(-50%, -50%);
+                -ms-transform: translate(-50%, -50%);
+                    transform: translate(-50%, -50%);
+            cursor: pointer; }
+        .tabs-container-list-item-innercontainer-side_width100 {
+          width: 100%; }
+        .tabs-container-list-item-innercontainer-side-table {
+          width: 65%; }
+          .tabs-container-list-item-innercontainer-side-table-row {
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-align: center;
+            -webkit-align-items: center;
+                -ms-flex-align: center;
+                    align-items: center;
+            -webkit-box-pack: justify;
+            -webkit-justify-content: space-between;
+                -ms-flex-pack: justify;
+                    justify-content: space-between;
+            padding: 10px 0;
+            border-bottom: 1px solid #E5E5E5; }
+            .tabs-container-list-item-innercontainer-side-table-row:last-child {
+              border-bottom: none; }
+            .tabs-container-list-item-innercontainer-side-table-row-item {
+              -webkit-box-flex: 0;
+              -webkit-flex: 0 1 150px;
+                  -ms-flex: 0 1 150px;
+                      flex: 0 1 150px;
+              display: -webkit-box;
+              display: -webkit-flex;
+              display: -ms-flexbox;
+              display: flex;
+              -webkit-box-align: center;
+              -webkit-align-items: center;
+                  -ms-flex-align: center;
+                      align-items: center; }
+
+.commentary {
+  margin-bottom: 40px; }
+  .commentary-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  .commentary-input {
+    max-width: 770px;
+    margin: 0 auto; }
+    .commentary-input-top {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      margin-bottom: 30px; }
+      .commentary-input-top-name {
+        font-size: 24px;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 300;
+        margin-left: 20px; }
+    .commentary-input-rate {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      margin-bottom: 30px; }
+      .commentary-input-rate-stars {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+            -ms-flex-align: center;
+                align-items: center;
+        margin-right: 20px; }
+        .commentary-input-rate-stars__star {
+          cursor: pointer; }
+      .commentary-input-rate-time-use {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+            -ms-flex-align: center;
+                align-items: center;
+        font-size: 14px;
+        color: #737373; }
+        .commentary-input-rate-time-use__input {
+          margin-left: 10px;
+          background: #F0F2F7;
+          border: 1px solid #E4E9F0;
+          -webkit-box-sizing: border-box;
+                  box-sizing: border-box;
+          -webkit-border-radius: 4px;
+                  border-radius: 4px;
+          height: 31px;
+          width: 204px;
+          outline: none;
+          font-size: 'Proxima Nova';
+          padding: 0 10px; }
+    .commentary-input-block {
+      margin-bottom: 20px; }
+      .commentary-input-block__head {
+        margin-bottom: 10px;
+        font-size: 14px;
+        color: #A4A9BD;
+        font-family: 'Proxima Nova', sans-serif;
+        letter-spacing: 1px; }
+      .commentary-input-block__input {
+        resize: none;
+        outline: none;
+        padding: 5px;
+        background: #F0F2F7;
+        border: 1px solid #E4E9F0;
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box;
+        -webkit-border-radius: 4px;
+                border-radius: 4px;
+        width: 100%;
+        min-height: 70px; }
+    .commentary-input-btn {
+      font-family: 'Roboto', sans-serif;
+      font-style: normal;
+      font-weight: 300;
+      line-height: normal;
+      font-size: 18px;
+      width: 209px;
+      height: 55px;
+      text-align: center;
+      background: transparent;
+      border: 2px solid #D71921;
+      -webkit-border-radius: 4px;
+              border-radius: 4px;
+      cursor: pointer;
+      letter-spacing: 1px; }
+      .commentary-input-btn:focus {
+        outline: none; }
+      .commentary-input-btn-wrapper {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+            -ms-flex-pack: center;
+                justify-content: center; }
+
+.photo-wrapper {
+  width: 75px;
+  height: 75px;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  background-position: center center;
+  -webkit-background-size: cover;
+          background-size: cover; }
+
+.recomendation-top {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  margin-bottom: 30px; }
+  .recomendation-top-name {
+    margin-left: 20px; }
+    .recomendation-top-name__names {
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: 300;
+      line-height: 34px;
+      font-size: 24px;
+      margin-bottom: 10px; }
+    .recomendation-top-name__job {
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: 300;
+      line-height: 25px;
+      font-size: 14px;
+      color: #737373; }
+  .recomendation-top-date {
+    margin-left: auto;
+    font-size: 14px; }
+
+.recomendation-text {
+  margin-bottom: 30px;
+  position: relative; }
+  .recomendation-text__head {
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+    margin-bottom: 10px; }
+  .recomendation-text__main {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 32px;
+    font-size: 18px;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s; }
+    .recomendation-text__main.hidden {
+      height: 160px;
+      overflow: hidden;
+      -webkit-transition: 0.5s;
+      -o-transition: 0.5s;
+      transition: 0.5s; }
+  .recomendation-text__arrow {
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    -webkit-transform: translate(-50%, 100%);
+        -ms-transform: translate(-50%, 100%);
+            transform: translate(-50%, 100%);
+    cursor: pointer; }
+
+.recomendation-gallery {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 30px; }
+  .recomendation-gallery-item {
+    width: 95px;
+    height: 95px;
+    margin-right: 20px; }
+    .recomendation-gallery-item:last-child {
+      margin-right: 0px; }
+    .recomendation-gallery-item img {
+      width: 100%; }
+
+.recomendation-btn {
+  width: 187px;
+  height: 42px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  font-size: 14px;
+  margin-right: 25px; }
+  .recomendation-btn-wrapper {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
